Fixed grid overlapping issue

--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
     justify-content: center;
     margin-top: 35px;
     margin-bottom: 50px;
-    width: 832px;
-    height: 832px;
+    width: 838px;
+    height: 9838px;
     position: relative;
     
 }
